--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -10,7 +10,8 @@
                script-src 'self'; 
                style-src 'self' 'unsafe-inline'; 
                img-src 'self' data:; 
-               connect-src http://localhost:3000 'self' data: ws:;"
+               connect-src http://localhost:3000 'self' data: ws:;
+               connect-src http://localhost:3001 'self' data: ws:;"
     />
   </head>
 
