修改配置文件

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8" />
@@ -10,8 +10,7 @@
                script-src 'self'; 
                style-src 'self' 'unsafe-inline'; 
                img-src 'self' data:; 
-               connect-src http://localhost:3000 'self' data: ws:;
-               connect-src http://localhost:3001 'self' data: ws:;"
+               connect-src http://localhost:3000 'self' data: ws:;"
     />
   </head>
 
